	    utilization (default: false).
   - ATTENTION: this model requires Eigen3 library. If you install SimGrid
     from source, please see the "Installing from source" section:
     https://simgrid.org/doc/latest/Installing_SimGrid.html#installing-from-the-source.
     No action is required if you use pre-compiled packages.

XBT:
 - Drop xbt_dynar_shrink().

Python:
 - Fixed the following bindings:
   - Actor.kill_all() [previously declared a member of the Actor class although it is a static member]
 - Added the following bindings:
     - this_actor.warning()
     - Mailbox.put_init() [example: examples/python/comm-waitallfor]
     - Comm.detach() [example: examples/python/comm-waitallfor]
     - Comm.wait_for() [example: examples/python/comm-waitfor/]
     - Comm.wait_any_for()
     - Comm.wait_all_for() [example: examples/python/comm-waitallfor]

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GH: issues on GitHub)
 - FG#57: Mc SimGrid should test whether ptrace is usable
 - FG#87: Smpi scripts fail with spaces in paths
 - FG#100: [SMPI] Order of the message matching is not guaranteed
 - FG#101: LGPL 2.1 is deprecated license
 - GH#151: Missing mutexes for DPOR.

----------------------------------------------------------------------------

SimGrid (3.30) January 30. 2022.

The Sunday Bloody Sunday release.

Main user-visible changes:
 - The SimDag API for the simulation of the scheduling of Directed Acyclic
   Graphs has been dropped. It was marked as deprecated for a couple of years.
   We finally complete the implementation of what has been called SimDag++
   internally, i.e., porting the different features of SimDag on top of S4U.
   The new way to simulate the execution of dependent activities directly by
   maestro (without any other actor) is details in the examples/cpp/dag-* series
   of examples.
 - The removal of SimDag led us to also remove the export to Jedule files that